--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "inotebook - Your notebook on the cloud",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +20,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
