--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "both": "concurrently \"npm run start\" \"node backend/index.js\""
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
